package io.github.ardoco.model;

public enum ArtifactType {
    TEXTUAL,
    JAVA_CODE,
    C_CODE
}